--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-.gradle
-/build/
-!gradle/wrapper/gradle-wrapper.jar
-
-
 
 ### IntelliJ IDEA ###
 .idea
@@ -10,3 +5,6 @@
 *.iml
 *.ipr
 /out/
+target
+*.jar
+*.war
