--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
 sudo: true
+
 install: true
 
 dist: trusty
@@ -10,11 +11,11 @@ jdk:
 os:
   - linux
 
-branches:
-  only:
-    - master
-    - develop
-    - future-adamov-00-02
+#branches:
+#  only:
+#    - master
+#    - develop
+#    - future-adamov-00-02
 
 before_install:
 # - chmod +x mvnw
@@ -25,7 +26,7 @@ before_install:
 
 cache:
   directories:
-    $HOME/.m2/repository
+    $HOME/.m2
     $HOME/.sonar/cache
     $HOME/.mvn
     .mvn
