minor redesign data base script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.mvc.view.prefix= /WEB-INF/pages/
-spring.mvc.view.suffix= .jsp
+spring.mvc.view.prefix=/WEB-INF/pages/
+spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/student_test
 spring.datasource.username=postgres
-spring.datasource.password=930000
+spring.datasource.password=root
+spring.jpa.show-sql=true
