added role, merge teacher, student, admin in User, remove teacher, student, admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix= /WEB-INF/pages/
 spring.mvc.view.suffix= .jsp
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/test_student
 spring.datasource.username=postgres
 spring.datasource.password=122544
