--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.2.0-M1</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
