--- a/.travis.yml
+++ b/.travis.yml
@@ -7,29 +7,22 @@ dist: trusty
 jdk:
   - oraclejdk8
 
-os:
-  - linux
-
 branches:
   only:
     - master
     - develop
 
-before_install:
- - chmod +x mvnw
-
 cache:
   directories:
-    $HOME/.m2
-    $HOME/.sonar/cache
-    $HOME/.mvn
-    .mvn
+  - '$HOME/.m2/repository'
+  - '$HOME/.sonar/cache'
 
 addons:
   sonarcloud:
-    organization: "lolret-github"
+    organization: "yacommand" # the key of the org you chose at step #3
     token:
-      secure: $SONAR_API_KEY
-
+      secure: a9df1a57e3b50afd2ebe362fa4196979d905471d # encrypted value of your token
 script:
-  ./mvnw clean package sonar:sonar
+# other script steps might be done before running the actual analysis
+- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+
