--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,13 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!--<dependency>-->
+        <!--Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!--<dependency>-->
 			<!--<groupId>org.junit.jupiter</groupId>-->
 			<!--<artifactId>junit-jupiter-engine</artifactId>-->
 			<!--<version>5.2.0-M1</version>-->
