--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,13 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!--<dependency>-->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>5.1.1.RELEASE</version>
+		</dependency>
+
+		<!--<dependency>-->
 			<!--<groupId>org.junit.jupiter</groupId>-->
 			<!--<artifactId>junit-jupiter-engine</artifactId>-->
 			<!--<version>5.2.0-M1</version>-->
