--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,20 @@ sudo: true
 install: true
 dist: trusty
 
+before_script:
+- psql -c 'create database student_test' -U postgres
+
 jdk:
-  - oraclejdk8
+- oraclejdk8
 
 branches:
   only:
-    - master
-    - develop
+  - master
+  - develop
+
+
+services:
+- postgresql
 
 cache:
   directories:
