travisCI with Sonar

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ dist: trusty
 
 before_script:
 - psql -c 'create database student_test' -U postgres
+- sudo -u postgres psql -c "ALTER ROLE postgres WITH password '123'"
 
 jdk:
 - oraclejdk8
@@ -31,5 +32,5 @@ addons:
       secure: a9df1a57e3b50afd2ebe362fa4196979d905471d # encrypted value of your token
 script:
 # other script steps might be done before running the actual analysis
-- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  //- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 
