--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ addons:
     organization: "yacommand" # the key of the org you chose at step #3
     token:
       secure: a9df1a57e3b50afd2ebe362fa4196979d905471d # encrypted value of your token
-  #script:
+script:
 # other script steps might be done before running the actual analysis
-  #- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 
