--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,12 @@ cache:
   - '$HOME/.sonar/cache'
 
 addons:
+  postgresql: "9.5"
   sonarcloud:
     organization: "yacommand" # the key of the org you chose at step #3
     token:
       secure: a9df1a57e3b50afd2ebe362fa4196979d905471d # encrypted value of your token
 script:
 # other script steps might be done before running the actual analysis
-- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
