travisCI with Sonar

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,5 @@ addons:
       secure: a9df1a57e3b50afd2ebe362fa4196979d905471d # encrypted value of your token
 script:
 # other script steps might be done before running the actual analysis
-- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+- mvn install -DskipTests=false -Dmaven.javadoc.skip=true -B -V
 
