travisCI with Sonar

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,5 @@ addons:
 #script:
 ## other script steps might be done before running the actual analysis
 #- mvn install -DskipTests=false -Dmaven.javadoc.skip=true -B -V
-script: "mvn test"
+script: ./mvnw clean install
 
