--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: java
 sudo: true
 
 install: true
+- "mvn -N io.takari:maven:wrapper -Dmaven=4.0.0"
+- "./mvnw --show-version --errors --batch-mode test-compile dependency:go-offline"
 dist: trusty
 
 before_script:
@@ -15,7 +17,8 @@ branches:
   only:
   - feature-00-02-traviswithsonar
 
-
+env:
+- MAVEN_VERSION=4.0.0
 
 services:
 - postgresql
