travisCI with Sonar

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ addons:
     organization: "yacommand" # the key of the org you chose at step #3
     token:
       secure: a9df1a57e3b50afd2ebe362fa4196979d905471d # encrypted value of your token
-#script:
+script:
 ## other script steps might be done before running the actual analysis
-#- mvn install -DskipTests=false -Dmaven.javadoc.skip=true -B -V
+- mvn install -DskipTests=false -Dmaven.javadoc.skip=true -B -V
 
