travisCI with Sonar

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 sudo: false
 
 dist: trusty
-
+before_install:
+- chmod +x ./mvnw
 before_script:
 - psql -c 'create database student_test' -U postgres
 - sudo -u postgres psql -c "ALTER ROLE postgres WITH password '123'"
