travisCI with Sonar

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: java
-sudo: false
+sudo: true
 
 dist: trusty
 before_install:
-- chmod +x ./mvnw
+- chmod +x /mvnw
 before_script:
 - psql -c 'create database student_test' -U postgres
 - sudo -u postgres psql -c "ALTER ROLE postgres WITH password '123'"
