--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: true
 
 dist: trusty
 before_install:
-- chmod +x /mvnw
+- chmod +x ./mvnw
 before_script:
 - psql -c 'create database student_test' -U postgres
 - sudo -u postgres psql -c "ALTER ROLE postgres WITH password '123'"
