--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: java
 sudo: true
 
 dist: trusty
-before_install:
-- chmod +x ./mvnw
+install: true
 before_script:
 - psql -c 'create database student_test' -U postgres
 - sudo -u postgres psql -c "ALTER ROLE postgres WITH password '123'"
@@ -29,5 +28,6 @@ addons:
     organization: "yacommand" # the key of the org you chose at step #3
     token:
       secure: a9df1a57e3b50afd2ebe362fa4196979d905471d # encrypted value of your token
-
+script:
+- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
