--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ addons:
       secure: a9df1a57e3b50afd2ebe362fa4196979d905471d # encrypted value of your token
 script:
 - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-
+- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
